:lipstick: Update UI and add icons

--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,22 @@
     "tabGroups",
     "storage"
   ],
+  "icons": {
+    "16": "icons/16x16.png",
+    "32": "icons/32x32.png",
+    "48": "icons/48x48.png",
+    "128": "icons/128x128.png",
+    "256": "icons/256x256.png"
+  },
   "action": {
-    "default_popup": "popup.html"
+    "default_popup": "popup.html",
+    "default_title": "AI tab grouping",
+    "default_icon": {
+      "16": "icons/16x16.png",
+      "32": "icons/32x32.png",
+      "48": "icons/48x48.png",
+      "128": "icons/128x128.png",
+      "256": "icons/256x256.png"
+    }
   }
 }
