--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
-  "name": "AI tab grouping",
-  "description": "Group your tabs with simple command with GPT-3",
+  "name": "TabTamer",
+  "description": "An AI-powered Chrome extension that groups your tabs intelligently based on a prompt.",
   "version": "1.0",
   "permissions": [
     "tabs",
@@ -17,7 +17,7 @@
   },
   "action": {
     "default_popup": "popup.html",
-    "default_title": "AI tab grouping",
+    "default_title": "TabTamer",
     "default_icon": {
       "16": "icons/16x16.png",
       "32": "icons/32x32.png",
